--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -15,6 +15,8 @@ $color-tangaroa-dark:               #011c40;
 $color-solitude-lite:               #e3ecf6;
 $color-prussian-blue-dark:          #002f6a;
 
+$color-koromiko-accent:             #ffb451;
+
 $color-neon-blue:                   #2c39f2;
 $color-torch-red:                   #ff1553;
 
