--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,7 +16,11 @@
 // Blocks
 // ---------------------------------
 
+@import "blocks/logo";
+@import "blocks/menu";
 @import "blocks/btn";
+@import "blocks/footer";
+@import "blocks/social-list";
 
 // ---------------------------------
 
