--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,10 +16,13 @@
 // Blocks
 // ---------------------------------
 
+@import "blocks/header";
 @import "blocks/logo";
 @import "blocks/menu";
+@import "blocks/menu-btn";
 @import "blocks/btn";
 @import "blocks/footer";
+@import "blocks/footer-menu";
 @import "blocks/social-list";
 
 // ---------------------------------
