накостылил состояние эктив

--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -83,9 +83,7 @@
     outline: 2px solid $color-koromiko-accent;
   }
 
-  &:active {
-    // использую !important чтобы перебить миксины для состояний
-    /* stylelint-disable-next-line declaration-no-important */
+  &:not(.bicycle:hover):active {
     opacity: 0.2;
   }
 }
