--- a/source/sass/blocks/footer-menu.scss
+++ b/source/sass/blocks/footer-menu.scss
@@ -72,9 +72,7 @@
     outline: 2px solid $color-koromiko-accent;
   }
 
-  &:active {
-    // использую !important чтобы перебить миксины для состояний
-    /* stylelint-disable-next-line declaration-no-important */
-    opacity: 0.2 !important;
+  &:not(.bicycle):active {
+    opacity: 0.2;
   }
 }
