--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -18,10 +18,8 @@
     outline: 2px solid $color-koromiko-accent;
   }
 
-  &:active {
-    // использую !important чтобы перебить миксины для состояний
-    /* stylelint-disable-next-line declaration-no-important */
-    opacity: 0.2 !important;
+  &:not(.bicycle:hover):active {
+    opacity: 0.2;
   }
 }
 
