--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -21,6 +21,7 @@
 @import "blocks/menu";
 @import "blocks/menu-btn";
 @import "blocks/btn";
+@import "blocks/hero";
 @import "blocks/footer";
 @import "blocks/footer-menu";
 @import "blocks/social-list";
