--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,6 +22,7 @@
 @import "blocks/menu-btn";
 @import "blocks/btn";
 @import "blocks/hero";
+@import "blocks/promo";
 @import "blocks/footer";
 @import "blocks/footer-menu";
 @import "blocks/social-list";
