--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,6 +23,7 @@
 @import "blocks/btn";
 @import "blocks/hero";
 @import "blocks/promo";
+@import "blocks/features";
 @import "blocks/footer";
 @import "blocks/footer-menu";
 @import "blocks/social-list";
