--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -22,7 +22,7 @@
   gap: 20px;
   justify-items: end;
   align-items: center;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
 
   @include vp-1023 {
     filter: unset;
