--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -7,7 +7,7 @@
   min-height: 650px;
   padding: 108px 0;
   background-color: $color-prussian-blue-dark;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+  filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
 
   @include vp-1023 {
     min-height: 638px;
@@ -44,7 +44,7 @@
   & h1,
   & p {
     color: $color-alice-blue-lite;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    filter: drop-shadow(0 4px 4px rgba(0, 0, 0, 0.25));
 
     @include vp-1023 {
       filter: unset;
