--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,6 +24,8 @@
 @import "blocks/hero";
 @import "blocks/promo";
 @import "blocks/features";
+@import "blocks/contacts";
+@import "blocks/map";
 @import "blocks/footer";
 @import "blocks/footer-menu";
 @import "blocks/social-list";
