сделал форму для всех экранов

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -79,4 +79,8 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 150%;
+
+  @include focus {
+    outline: 3px solid $color-koromiko-accent;
+  }
 }
