--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -56,8 +56,10 @@
     width: 100%;
     height: 2px;
     background-color: rgba($link-color, 0.8);
+    transform-origin: 50%;
+    transform: scale(0);
     opacity: 0;
-    transition: opacity $trans-default;
+    transition: transform $trans-default, opacity $trans-default;
     content: "";
   }
 
@@ -76,12 +78,13 @@
 
   @include hover {
     &::after {
+      transform: scale(1);
       opacity: 1;
     }
   }
 
   @include focus {
-    outline: 2px solid $color-koromiko-accent;
+    outline: 3px solid $color-koromiko-accent;
   }
 
   &:not(.bicycle:hover):active {
