--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -16,9 +16,8 @@ $color-solitude-lite:               #e3ecf6;
 $color-prussian-blue-dark:          #002f6a;
 
 $color-koromiko-accent:             #ffb451;
-
-$color-neon-blue:                   #2c39f2;
-$color-torch-red:                   #ff1553;
+$color-pastel-green:                #7cde8b;
+$color-burnt-sienna:                #f27a5c;
 
 // Gradient
 
