сделал список рейсов и лицевую часть одной карточки круиза

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,6 +24,8 @@
 @import "blocks/hero";
 @import "blocks/promo";
 @import "blocks/features";
+@import "blocks/next-cruises";
+@import "blocks/product-card";
 @import "blocks/booking";
 @import "blocks/form";
 @import "blocks/contacts";
