--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -14,6 +14,7 @@ $color-tangaroa-dark:               #011c40;
 
 $color-solitude-lite:               #e3ecf6;
 $color-prussian-blue-dark:          #002f6a;
+$color-quartz:                      #d8d8d9;
 
 $color-koromiko-accent:             #ffb451;
 $color-pastel-green:                #7cde8b;
