--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -78,6 +78,14 @@
   justify-content: flex-end;
   padding: 30px;
 
+  @include vp-1023 {
+    padding: 35px;
+  }
+
+  @include vp-767 {
+    padding: 25px;
+  }
+
   & h3 {
     margin: 0;
     font-weight: 500;
@@ -102,6 +110,14 @@
   transform: translateX(100%);
   transition: transform $trans-reverse;
   transition-delay: 0.5s;
+
+  @include vp-1023 {
+    padding: 35px;
+  }
+
+  @include vp-767 {
+    padding: 35px 25px;
+  }
 
   // стили для контента
   & h4 {
