--- a/source/sass/blocks/product-card.scss
+++ b/source/sass/blocks/product-card.scss
@@ -22,6 +22,7 @@
   &:focus-within {
     & .product-card__content {
       transition: transform $trans-default;
+      transition-delay: 0.3s;
       transform: translateX(0);
     }
   }
