--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -37,33 +37,36 @@
 
 .contacts__address-wrapper {
   width: 43.1%;
+  margin-top: -2px;
 
   @include vp-1023 {
     width: 47.79%;
+    margin-top: -3px;
   }
 
   @include vp-767 {
     width: 100%;
     order: -1;
-    margin-bottom: 43px;
+    margin-top: -7px;
+    margin-bottom: 37px;
   }
 
   & > p {
     margin: 0;
-    margin-bottom: 45px;
+    margin-bottom: 33px;
     font-weight: 500;
     font-size: 18px;
     line-height: 150%;
 
     @include vp-1023 {
-      margin-bottom: 40px;
+      margin-bottom: 27px;
     }
   }
 }
 
 .contacts__item {
   position: relative;
-  margin-top: 33px;
+  margin-top: 20px;
 
   & img {
     position: absolute;
@@ -82,5 +85,13 @@
 
   @include focus {
     outline: 3px solid $color-koromiko-accent;
+  }
+
+  & > br {
+    display: none;
+
+    @include vp-1023 {
+      display: inline;
+    }
   }
 }
