--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,10 +1,16 @@
 .footer {
   padding: 50px 0;
+  padding-bottom: 36px;
   color: $color-alice-blue-lite;
   background-color: $color-tangaroa-dark;
 
+  @include vp-1023 {
+    padding-bottom: 50px;
+  }
+
   @include vp-767 {
     padding: 40px 0;
+    padding-bottom: 31px;
   }
 }
 
@@ -30,11 +36,13 @@
 
 .footer__social-list {
   margin: 0;
+  margin-top: 4px;
   margin-left: auto;
   margin-right: -13.5px;
 
   @include vp-1023 {
-    margin-right: -11px;
+    margin: 0;
+    margin-right: -13px;
   }
 
   @include vp-767 {
@@ -47,4 +55,10 @@
 
 .footer__menu {
   height: 100%;
+  margin-top: 2px;
+  margin-left: -4px;
+
+  @include vp-1023 {
+    margin: 0;
+  }
 }
