--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -35,10 +35,16 @@
 
 .hero__container {
   position: relative;
+  margin-top: -8px;
   padding-left: 95px;
 
   @include vp-1023 {
+    margin-top: -7px;
     padding-left: 0;
+  }
+
+  @include vp-767 {
+    margin-top: -4px;
   }
 
   & h1,
@@ -53,19 +59,19 @@
 
   & h1 {
     margin: 0;
-    margin-bottom: 30px;
+    margin-bottom: 12px;
     font-weight: 700;
     font-size: 54px;
     line-height: 66px;
 
     @include vp-1023 {
-      margin-bottom: 29px;
+      margin-bottom: 12px;
       font-size: 50px;
       line-height: 61px;
     }
 
     @include vp-767 {
-      margin-bottom: 25px;
+      margin-bottom: 11px;
       font-size: 36px;
       line-height: 125%;
     }
@@ -83,6 +89,7 @@
     }
 
     @include vp-767 {
+      width: 210px;
       font-size: 16px;
       line-height: 140%;
     }
