--- a/source/sass/blocks/next-cruises.scss
+++ b/source/sass/blocks/next-cruises.scss
@@ -11,7 +11,8 @@
 
   & h2 {
     margin: 0;
-    margin-bottom: 60px;
+    margin-top: -10px;
+    margin-bottom: 49px;
     font-weight: 600;
     font-size: 28px;
     line-height: 150%;
@@ -22,7 +23,7 @@
     }
 
     @include vp-767 {
-      margin-bottom: 40px;
+      margin-bottom: 31px;
       font-size: 24px;
     }
   }
