--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -66,32 +66,35 @@
 
 .contacts__item {
   position: relative;
+  display: block;
+  margin: 0;
   margin-top: 20px;
+  padding-left: 28px;
 
   & img {
     position: absolute;
     top: 2px;
+    left: 0;
   }
-}
-
-.contacts__address a,
-.contacts__address p {
-  margin: 0;
-  margin-left: 28px;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 150%;
 
   @include focus {
     outline: 3px solid $color-koromiko-accent;
   }
 
-  & > br {
+  & br {
     display: none;
 
     @include vp-1023 {
       display: inline;
     }
+  }
+
+  & span {
+    display: block;
+    margin: 0;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 150%;
   }
 }
