исправил кликабельную область у ссылок адреса

--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -67,6 +67,7 @@
 .contacts__item {
   position: relative;
   display: block;
+  width: fit-content;
   margin: 0;
   margin-top: 20px;
   padding-left: 28px;
