иправления: убрал выделение текста на кнопке в форме

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -158,6 +158,7 @@
   background-color: $color-alice-blue-lite;
   border: none;
   cursor: pointer;
+  user-select: none;
   box-shadow: none;
   transition: box-shadow $trans-default;
 
