--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -62,6 +62,39 @@
       margin-bottom: 27px;
     }
   }
+
+  & a {
+    $link-color: $color-tangaroa-dark;
+    color: $link-color;
+
+    opacity: 1;
+    transition: opacity $trans-default;
+
+    &::after {
+      position: absolute;
+      bottom: -4px;
+      left: 0;
+      display: block;
+      width: 100%;
+      height: 1px;
+      background-color: rgba($link-color, 0.8);
+      transform: scale(0);
+      opacity: 0;
+      transition: transform $trans-default, opacity $trans-default;
+      content: "";
+    }
+
+    @include hover {
+      &::after {
+        transform: scale(1);
+        opacity: 1;
+      }
+    }
+
+    @include focus {
+      outline: 3px solid $color-koromiko-accent;
+    }
+  }
 }
 
 .contacts__item {
@@ -76,10 +109,6 @@
     position: absolute;
     top: 2px;
     left: 0;
-  }
-
-  @include focus {
-    outline: 3px solid $color-koromiko-accent;
   }
 
   & br {
