--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -108,8 +108,17 @@
 
   & p {
     margin: 0;
+    margin-top: 13px;
     font-size: 14px;
     line-height: 142.8%;
+
+    @include vp-1023 {
+      margin-top: 11px;
+    }
+
+    @include vp-767 {
+      margin-top: 9px;
+    }
   }
 }
 
