--- a/source/sass/blocks/menu.scss
+++ b/source/sass/blocks/menu.scss
@@ -7,6 +7,7 @@
   @include vp-767 {
     flex-direction: column;
     flex-wrap: nowrap;
+    padding-bottom: 75px;
     padding-left: 15px;
     padding-right: 30px;
     background-color: $color-alice-blue-lite;
